--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,9 +1,8 @@
 # infra/docker-compose.yml
-version: "3.8"
 
 services:
   minio:
-    image: minio/minio:RELEASE.2024-09-13T20-00-00Z
+    image: minio/minio:latest
     container_name: minio
     ports:
       - "9000:9000"   # API
@@ -17,7 +16,7 @@ services:
     networks: [data-net]
 
   mc:
-    image: minio/mc:RELEASE.2024-09-13T20-07-19Z
+    image: minio/mc:latest
     container_name: minio-mc
     depends_on: [minio]
     entrypoint: ["/bin/sh", "/init.sh"]
@@ -50,9 +49,10 @@ services:
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
-      AIRFLOW__CORE__FERNET_KEY: "fernetfernetfernetfernetfernetfernetfernet="
+      AIRFLOW__CORE__FERNET_KEY: "Ly-egQ1zycqB6bQGRQhypHowuEHSyBwg6ccGpVJa_GA="
       AIRFLOW__WEBSERVER__RBAC: "True"
       AIRFLOW__CORE__LOAD_EXAMPLES: "False"
+      AIRFLOW__WEBSERVER__SECRET_KEY: "temporarysecretkey123456789012345"
       MINIO_ENDPOINT: http://minio:9000
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio123
@@ -62,11 +62,12 @@ services:
       - ../datasets:/opt/project/datasets
     ports:
       - "8080:8080"
+      - "8000:8000"
     command: bash -c "airflow db init && airflow users create -u admin -p admin -r Admin -e admin@example.com -f Admin -l User || true && airflow webserver & sleep 5 && airflow scheduler"
     networks: [data-net]
 
   spark:
-    image: bitnami/spark:3.5.1
+    image: apache/spark:3.5.0
     container_name: spark
     environment:
       SPARK_MODE: master
@@ -76,10 +77,11 @@ services:
       MINIO_SECRET_KEY: minio123
     volumes:
       - ../src:/opt/project/src
-      - ../infra/spark/spark-defaults.conf:/opt/bitnami/spark/conf/spark-defaults.conf
+      - ../infra/spark/spark-defaults.conf:/opt/spark/conf/spark-defaults.conf
     ports:
       - "7077:7077"
-      - "8081:8081"
+      - "8081:8080"
+    command: ["/opt/spark/bin/spark-class", "org.apache.spark.deploy.master.Master"]
     networks: [data-net]
 
   metabase:
